# Reconstructing_pointclouds_with_icp_tricp

./: CMakeLists.txt  README.md
Results/horse/: horse_0_20_icp.txt  horse_0_20_tricp.txt  horse_10_50_icp.txt  horse_10_50_tricp.txt  horse_20_100_icp.txt  horse_20_100_tricp.txt  horse_5_200_icp.txt  horse_5_200_tricp.txt
Results/lion/: lion_0_20_icp.txt  lion_0_20_tricp.txt  lion_10_50_icp.txt  lion_10_50_tricp.txt  lion_20_0_icp.txt  lion_20_0_tricp.txt  lion_5_50_icp.txt  lion_5_50_tricp.txt
Results/wolf/: wolf_0_20_icp.txt  wolf_0_20_tricp.txt  wolf_10_100_icp.txt  wolf_10_100_tricp.txt  wolf_20_50_icp.txt  wolf_20_50_tricp.txt  wolf_5_50_icp.txt  wolf_5_50_tricp.txt
dataset/horse/: horse_pc1.pcd  horse_pc2.pcd
dataset/lion/: lion_pc1.pcd  lion_pc2.pcd
dataset/wolf/: wolf_pc1.pcd  wolf_pc2.pcd
src/: icp_tricp.cpp  test.cpp
